syntax = "proto3";


option go_package = "nativelog";
// Log data is collected through file scratcher of agent.
// Natively, Satellite provides various ways to collect logs.
message LogData {
  // [Optional] The timestamp of the log, in millisecond.
  // If not set, OAP server would use the received timestamp as log's timestamp, or relies on the OAP server analyzer.
  int64 timestamp = 1;
  // [Required] **Service**. Represents a set/group of workloads which provide the same behaviours for incoming requests.
  //
  // The logic name represents the service. This would show as a separate node in the topology.
  // The metrics analyzed from the spans, would be aggregated for this entity as the service level.
  //
  // If this is not the first element of the streaming, use the previous not-null name as the service name.
  string service = 2;
//  // [Optional] **Service Instance**. Each individual workload in the Service group is known as an instance. Like `pods` in Kubernetes, it
//  // doesn't need to be a single OS process, however, if you are using instrument agents, an instance is actually a real OS process.
//  //
//  // The logic name represents the service instance. This would show as a separate node in the instance relationship.
//  // The metrics analyzed from the spans, would be aggregated for this entity as the service instance level.
//  string serviceInstance = 3;
//  // [Optional] **Endpoint**. A path in a service for incoming requests, such as an HTTP URI path or a gRPC service class + method signature.
//  //
//  // The logic name represents the endpoint, which logs belong.
//  string endpoint = 4;
//  // [Required] The content of the log.
//  LogDataBody body = 5;
//  // [Optional] Logs with trace context
//  TraceContext traceContext = 6;
//  // [Optional] The available tags. OAP server could provide search/analysis capabilities based on these.
//  LogTags tags = 7;
//  // [Optional] Since 9.0.0
//  // The layer of the service and servce instance. If absent, the OAP would set `layer`=`ID: 2, NAME: general`
//  string layer = 8;
}