syntax = "proto3";

package nativetracing;

option go_package = "nativetracing";


// The segment is a collection of spans. It includes all collected spans in a simple one request context, such as a HTTP request process.
//
// We recommend the agent/SDK report all tracked data of one request once for all, such as,
// typically, such as in Java, one segment represent all tracked operations(spans) of one request context in the same thread.
// At the same time, in some language there is not a clear concept like golang, it could represent all tracked operations of one request context.
message SegmentObject {
  // A string id represents the whole trace.
  string traceId = 1;
  // A unique id represents this segment. Other segments could use this id to reference as a child segment.
  string traceSegmentId = 2;
}